# DuckDB-k8s

./: .gitignore  Dockerfile  Makefile  README.md  k8s-duckdb-config.yaml  my_db.duckdb  pyproject.toml  query_duckdb.py  setup_duckdb.py
.devcontainer/: Dockerfile.devcontainer  devcontainer.json
scripts/makefiles/: docker.mk  git.mk  k8s.mk  kubectl.mk  minikube.mk  python.mk
src/: hello.py  query_duckdb.py  setup_duckdb.py
