[project]
name = "duckdb-k8s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "ruff>=0.6.4",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pydantic>=2.5.0",
]

[tool.ruff]
select = ["E", "F", "B", "I", "C90", "N", "D", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PL", "TRY", "UP", "YTT", "RUF"]
ignore = []
target-version = "py312"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint]
max-line-length = 120
disable = ["C0111", "C0103"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pydantic]
warn_required_dynamic_aliases = true